--- a/termos.html
+++ b/termos.html
@@ -17,7 +17,7 @@
     />
     <title>Termos e condições | Bikcraft - Bicicletas elétricas</title>
   </head>
-  <body>
+  <body id="termos">
     <header class="header-bg">
       <div class="header container">
         <a href="./">
