um monte de atualização

--- a/Bicicletas/nimbus.html
+++ b/Bicicletas/nimbus.html
@@ -4,16 +4,23 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Nimbus | Bikcraft - Bicicletas elétricas</title>
     <meta name="description" content="Nimbus" />
-    <link rel="stylesheet" href="../css/style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
+
+    <link rel="icon" href="../favicon.svg" type="image/svg+xml">
+    <link rel="preload" href="../css/style.css" as="style">
+    <link rel="stylesheet" href="../css/style.css">
+
+    <script>document.documentElement.classList.add('js')</script>
+  
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap"
       rel="stylesheet"
-    />
-    <title>Nimbus | Bikcraft - Bicicletas elétricas</title>
+    /> -->
   </head>
+  
   <body id="bicicleta">
     <header class="header-bg">
       <div class="header container">
@@ -53,7 +60,7 @@
             velocidade.
           </p>
           <div class="bicicleta-comprar">
-            <a href="../orcamento.html" class="botao">Comprar agora</a>
+            <a href=".../orcamento.html?tipo=bikcraft&produto=nimbus" class="botao">Comprar agora</a>
             <span class="font-1-xs cor-6"
               ><img src="../img/icones/entrega.svg" alt="" /> entrega em 5
               dias</span
@@ -187,5 +194,6 @@
         </p>
       </div>
     </footer>
+  <script src="../js/script.js"></script>
   </body>
 </html>
