--- a/bicicletas.html
+++ b/bicicletas.html
@@ -4,20 +4,23 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Bicicletas"
-    />
-    <link rel="stylesheet" href="./css/style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <title>Bicicletas | Bikcraft - Bicicletas elétricas</title>
+    <meta name="description"content="Bicicletas"/>
+    
+    <link rel="icon" href="./favicon.svg" type="image/svg+xml">
+    <link rel="preload" href="./css/style.css" as="style">
+    <link rel="stylesheet" href="./css/style.css">
+
+    <script>document.documentElement.classList.add('js')</script>
+  
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap"
       rel="stylesheet"
-    />
-    <title>Bicicletas | Bikcraft - Bicicletas elétricas</title>
+    /> -->
   </head>
-
+  
   <body id="bicicletas">
     <header class="header-bg">
       <div class="header container">
@@ -136,5 +139,6 @@
         <p class="footer-copy font-2-m cor-6">Bikcraft © Alguns direitos reservados.</p>
       </div>
     </footer>
+  <script src="./js/script.js"></script>
   </body>
 </html>
