--- a/index.html
+++ b/index.html
@@ -4,19 +4,22 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Bicicletas elétricas de alta precisão e qualidade,
-        feitas sob medida. para o cliente. Explore o mundo na sua velocidade com a Bikcraft."
-    />
-    <link rel="stylesheet" href="./css/style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <title>Bikcraft - Bicicletas elétricas</title>
+    <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade,
+        feitas sob medida. para o cliente. Explore o mundo na sua velocidade com a Bikcraft."/>
+
+    <link rel="icon" href="./favicon.svg" type="image/svg+xml">
+    <link rel="preload" href="./css/style.css" as="style">
+    <link rel="stylesheet" href="./css/style.css">
+
+    <script>document.documentElement.classList.add('js')</script>
+  
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap"
       rel="stylesheet"
-    />
-    <title>Bikcraft - Bicicletas elétricas</title>
+    /> -->
   </head>
   <body>
     <header class="header-bg">
@@ -38,20 +41,20 @@
     <main class="introducao-bg">
       <div class="introducao container">
         <div class="introducao-conteudo">
-          <h1 class="font-1-xxl cor-0">
+          <h1 class="font-1-xxl cor-0" data-anime="200">
             Bicicletas feitas sob medida<span class="cor-p1">.</span>
           </h1>
-          <p class="font-2-l cor-5">
+          <p class="font-2-l cor-5" data-anime="400">
             Bicicletas elétricas de alta precisão e qualidade, feitas sob medida
             para você. Explore o mundo na sua velocidade com a Bikcraft.
           </p>
-          <a class="botao" href="./bicicletas.html">Escolha a sua</a>
+          <a class="botao" href="./bicicletas.html" data-anime="600">Escolha a sua</a>
         </div>
         <div>
-          <img
-            src="./img/fotos/introducao.jpg"
-            alt="Bicicleta elétrica preta."
-          />
+          <picture data-anime="800">
+            <source media="(max-width: 800px)" srcset="./img/bicicletas.nimbus.jpg">
+            <img src="./img/fotos/introducao.jpg" width="1280" height="1600" alt="Bicicleta elétrica preta."/>
+          </picture>
         </div>
       </div>
     </main>
@@ -231,5 +234,7 @@
       <p class="footer-copy font-2-m cor-6">Bikcraft © Alguns direitos reservados.</p>
     </div>
   </footer>
+  <script src="./js/plugins/simple-anime.js"></script>;
+  <script src="./js/script.js"></script>
   </body>
 </html>
