--- a/seguros.html
+++ b/seguros.html
@@ -4,18 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Seguros"
-    />
-    <link rel="stylesheet" href="./css/style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <title>Seguros | Bikcraft - Bicicletas elétricas</title>
+    <meta name="description"content="Seguros"/>
+    
+    <link rel="icon" href="favicon.svg" type="image/svg+xml">
+    <link rel="preload" href="./css/style.css" as="style">
+    <link rel="stylesheet" href="./css/style.css">
+
+    <script>document.documentElement.classList.add('js')</script>
+  
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap"
       rel="stylesheet"
-    />
-    <title>Seguros | Bikcraft - Bicicletas elétricas</title>
+    /> -->
   </head>
   <body id="seguros">
     <header class="header-bg">
@@ -43,7 +46,7 @@
       </div>
 
         <div class="seguros container">
-          <div class="seguros-item">
+          <div class="seguros-item" data-anime="200">
             <h3 class="font-1-xl cor-6">PRATA</h3>
             <span class="font-1-xl cor-0">R$199 <span>mensal</span></span>
             <ul class="font-2-m cor-0">
@@ -52,10 +55,10 @@
               <li>Suporte das 08h às 18h</li>
               <li>Cobertura estadual</li>
             </ul>
-            <a href="./orcamento.html" class="botao secundario">Inscreva-se</a>
+            <a href="./orcamento.html?tipo=seguro&produto=prata" class="botao secundario">Inscreva-se</a>
           </div>
   
-          <div class="seguros-item">
+          <div class="seguros-item" data-anime="400">
             <h3 class="font-1-xl cor-6">OURO</h3>
             <span class="font-1-xl cor-0">R$299 <span>mensal</span></span>
             <ul class="font-2-m cor-0">
@@ -65,7 +68,7 @@
               <li>Desconto em parceiros</li>
               <li>Acesso ao Clube Bikcraft</li>
             </ul>
-            <a href="./orcamento.html" class="botao">Inscreva-se</a>
+          <a href="./orcamento.html?tipo=seguro&produto=ouro" class="botao">Inscreva-se</a>
           </div>
         </div>
     </main>
@@ -115,36 +118,35 @@
 
     <article class="perguntas container">
       <h2 class="font-1-xxl cor-0">perguntas frequentes<span class="cor-p1">.</span></h2>
-
       <dl>
         <div>
-          <dt class="font-1-m-b">Qual forma de pagamento vocês aceitam?</dt>
-          <dd class="font-2-s cor-9">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+          <dt><button class="font-1-m-b" aria-controls="pergunta1" aria-expanded="true"> Qual forma de pagamento vocês aceitam?</button></dt>
+          <dd id="pergunta1" class="font-2-s cor-9 ativa" >Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
         </div>
 
         <div>
-          <dt class="font-1-m-b">Como posso entrar em contato?</dt>
-          <dd class="font-2-s cor-9">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+          <dt><button class="font-1-m-b" aria-controls="pergunta2" aria-expanded="false"> Qual forma de pagamento vocês aceitam?</button>Como posso entrar em contato?</dt>
+          <dd id="pergunta2" class="font-2-s cor-9">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
         </div>
 
         <div>
-          <dt class="font-1-m-b">Vocês possuem algum desconto?</dt>
-          <dd class="font-2-s cor-9">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+          <dt><button class="font-1-m-b"aria-controls="pergunta3" aria-expanded="false"> Qual forma de pagamento vocês aceitam?</button>Vocês possuem algum desconto?</dt>
+          <dd id="pergunta3" class="font-2-s cor-9">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
         </div>
 
         <div>
-          <dt class="font-1-m-b">Qual a garantia que possuo?</dt>
-          <dd class="font-2-s cor-9">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+          <dt><button class="font-1-m-b"aria-controls="4" aria-expanded="false"> Qual forma de pagamento vocês aceitam?</button>Qual a garantia que possuo?</dt>
+          <dd id="pergunta4" class="font-2-s cor-9">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
         </div>
 
         <div>
-          <dt class="font-1-m-b">QPosso parcelar no boleto?</dt>
-          <dd class="font-2-s cor-9">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+          <dt><button class="font-1-m-b"aria-controls="pergunta5" aria-expanded="false"> Qual forma de pagamento vocês aceitam?</button>Posso parcelar no boleto?</dt>
+          <dd id="pergunta5" class="font-2-s cor-9">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
         </div>
 
         <div>
-          <dt class="font-1-m-b">Quantas trocas posso fazer ao ano?</dt>
-          <dd class="font-2-s cor-9">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+          <dt><button class="font-1-m-b"aria-controls="pergunta6" aria-expanded="false"> Qual forma de pagamento vocês aceitam?</button>Quantas trocas posso fazer ao ano?</dt>
+          <dd id="pergunta6" class="font-2-s cor-9">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
         </div>
       </dl>
 
@@ -187,5 +189,7 @@
         <p class="footer-copy font-2-m cor-6">Bikcraft © Alguns direitos reservados.</p>
       </div>
     </footer>
+    <script src="./js/plugins/simple-anime.js"></script>;
+    <script src="./js/script.js"></script>
   </body>
 </html>
